<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.satya.newsglobal.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_newsDetails"
            app:destination="@id/navigation_newsDetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.satya.newsglobal.ui.fragment.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_category_list"
            app:destination="@id/navigation_category_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.satya.newsglobal.ui.fragment.Global.GlobalFragment"
        android:label="@string/global"
        tools:layout="@layout/fragment_global" />

    <fragment
        android:id="@+id/navigation_newsDetails"
        android:name="com.satya.newsglobal.ui.fragment.NewsDetailViewFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_news_detail_view" >
        <action
            android:id="@+id/action_navigation_newsDetails_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category_list"
        android:name="com.satya.newsglobal.ui.fragment.category.CategoryNewsListFragment"
        android:label="CategoryList"
        tools:layout="@layout/fragment_category_news_list">
        <action
            android:id="@+id/action_navigation_category_list_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

</navigation>